# SeeCen

./: .env  .env.example  .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SELF_HOSTING.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.lovable/: plan.md
public/: robots.txt  sitemap.xml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ErrorBoundary.tsx
src/config/: brand.ts
src/contexts/: AuthContext.tsx  SidebarContext.tsx  StoreContext.tsx
src/hooks/: useFinanceAudit.ts  useNewOrderShortcut.ts  usePwaInstall.ts
src/i18n/: index.ts
src/lib/: backup.ts  channelConnectors.ts  channelConnectorsV2.ts  errorUtils.ts  indianStates.ts  invoiceGenerator.ts  packSlip.ts  rtoRisk.ts  shippingProviders.ts  whatsapp.ts
src/pages/: AICoachPage.tsx  AddProduct.tsx  AdminPanel.tsx  Analytics.tsx  Auth.tsx  Catalogue.tsx  Channels.tsx  CreateOrder.tsx  Customer360.tsx  Customers.tsx  Dashboard.tsx  Employees.tsx  Feedback.tsx  Finance.tsx  Fulfillment.tsx  Growth.tsx  Hub.tsx  Inventory.tsx  Landing.tsx  Ndr.tsx  OperationsPanel.tsx  OrderDetail.tsx  OrderInbox.tsx  Orders.tsx  PendingApproval.tsx  ProductDetail.tsx  Returns.tsx  SalesCoach.tsx  Settings.tsx  Shipping.tsx  UIKit.tsx
supabase/: config.toml
supabase/migrations/: 20251212133936_4b06a225-29c3-4805-8236-1e296b21e03f.sql  20251212133947_12ec4184-2874-4763-9ec5-a0931e45c491.sql  (+32 more)
(+79 files in other folders)
