[package]
name = "seecen"
version = "1.0.0"
description = "SeeCen — open-source seller command center"
authors = ["SeeCen contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
